--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -371,7 +371,7 @@
     padding: 70px 0;
     align-items: center;
     margin: 0 auto;
-    height: 100vh;
+    height: auto;
     color:#fff;
     font-family: 'Lato',sans-serif;
 }
@@ -398,12 +398,16 @@
 .testimony .content .content-testimony{
     padding: 50px 30px;
     float: left;
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-start;
 }
 
 .testimony .content .content-testimony .photo{
     padding: 0 50px;
     width: auto;
     height: auto;
+    float: left;
 }
 
 .person-testimony{
@@ -418,11 +422,13 @@
 
 .testimony .content .content-testimony .testimony-content .author-testimony{
     font-weight: bold;
+    font-size: 18px;
 }
 
 .testimony .content .content-testimony .testimony-content .detail-testimony{
     font-weight: lighter;
     font-style: italic;
     padding-top: 20px;
+    font-size: 24px;
 }
 
